--- a/dj.html
+++ b/dj.html
@@ -6,8 +6,11 @@
     <meta name="viewport"
         content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000">
-    <title>Light Show</title>
-    <link rel="manifest" href="dj-manifest.webmanifest">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="0"/>
+    <title>DJ Lights</title>
+    <link rel="manifest" href="lights-manifest.webmanifest">
 </head>
 
 <body tabindex="-1">
@@ -919,6 +922,8 @@
         } catch (error) {
         }
     }
+
+    // navigator.serviceWorker.register('/sw.js', { scope: '/app1/' });
 
     paintBackground();
 
