--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport"
         content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000">
-    <title>Song Queue</title>
-    <link rel="manifest" href="manifest.webmanifest?v=7">
+    <title>DJ Songs</title>
+    <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body tabindex="-1">
