--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
     function socketInit() {
         console.log("socket init");
         
-        socket = new WebSocket("wss://" + location.hostname + ":7654");
+        const parts = location.hostname.split('.');
+        const domain = parts.slice(-2).join('.');
+        socket = new WebSocket("wss://" + domain + ":7654");
 
         socket.onopen = function () {
             // sometimes takes a long time to get here
