--- a/index.html
+++ b/index.html
@@ -88,9 +88,15 @@
     function socketInit() {
         console.log("socket init");
         
-        const parts = location.hostname.split('.');
-        const domain = parts.slice(-2).join('.');
-        socket = new WebSocket("wss://" + domain + ":7654");
+        let connectHost = location.hostname;
+        const isIpAddress = /^(?:[0-9]{1,3}\.){3}[0-9]{1,3}$/.test(connectHost);
+        if (!isIpAddress && connectHost.split('.').length > 2) {
+            const parts = connectHost.split('.');
+            connectHost = parts.slice(-2).join('.');
+        }
+        const string_to_connect = "wss://" + connectHost + ":7654"
+        console.log("Connecting to websocket:", string_to_connect);
+        socket = new WebSocket(string_to_connect);
 
         socket.onopen = function () {
             // sometimes takes a long time to get here
@@ -127,11 +133,9 @@
         }
 
         socket.onmessage = function (event) {
-            console.log("socket message");
+            // console.log("socket message");
             let msg = JSON.parse(event.data);
-
-
-            console.log('recieved message', msg);
+            // console.log('recieved message', msg);
 
             if(msg.songs){
                 songsConfig = msg.songs;
