--- a/dj.html
+++ b/dj.html
@@ -167,6 +167,26 @@
                 }
             }
 
+            if(msg.update_winamp_offsets){
+                console.log(msg)
+                let winampOffsets = msg.update_winamp_offsets;
+
+                for (winampUpdate of winampOffsets) {
+                    let effectName = winampUpdate.effect_name;
+                    if (effectsConfig[effectName] != null) {
+                        effectsConfig[effectName].winamp_offsets = {
+                            'winamp_bright_shift': winampUpdate.winamp_bright_shift / 100,
+                            'winamp_hue_shift': winampUpdate.winamp_hue_shift / 360,
+                            'winamp_sat_shift': winampUpdate.winamp_sat_shift / 100,
+                            'winamp_beat_sensitivity': winampUpdate.winamp_beat_sensitivity
+                        };
+                        console.log('Updated winamp offsets for effect:', effectName, effectsConfig[effectName].winamp_offsets);
+                    } else {
+                        console.warn('Effect not found in config:', effectName);
+                    }   
+                }
+            }
+
             if(msg.status){
                 if (msg.status.beat_sens_string) {
                     beatSensElem.textContent = msg.status.beat_sens_string;
@@ -333,6 +353,39 @@
             if(!this.active){
                 this.classList.add('effect-button-active');
                 this.active = true;
+
+                console.log('LOOK AT ME: winamp_offsets', effectsConfig[this.effect].winamp_offsets);
+
+                // adjusts all the sliders to the winamp offsets
+                let the_winamp_offsets = {
+                    'winamp_hue_shift': 0,
+                    'winamp_sat_shift': 0,
+                    'winamp_bright_shift': 0,
+                    'winamp_beat_sensitivity': 1
+                }
+                if (effectsConfig[this.effect].winamp_offsets) {
+                    the_winamp_offsets = effectsConfig[this.effect].winamp_offsets;
+                }
+                let hueSlider = document.getElementById('hue');
+                if (hueSlider) {
+                    hueSlider.value = the_winamp_offsets['winamp_hue_shift'] * 360;
+                    document.getElementById('hueValue').textContent = hueSlider.value;
+                }
+                let saturationSlider = document.getElementById('saturation');
+                if (saturationSlider) {
+                    saturationSlider.value = the_winamp_offsets['winamp_sat_shift'] * 100;
+                    document.getElementById('saturationValue').textContent = saturationSlider.value;
+                }
+                let lightnessSlider = document.getElementById('lightness');
+                if (lightnessSlider) {
+                    lightnessSlider.value = the_winamp_offsets['winamp_bright_shift'] * 100;
+                    document.getElementById('lightnessValue').textContent = lightnessSlider.value;
+                }
+                let sensitivitySlider = document.getElementById('sensitivity');
+                if (sensitivitySlider) {
+                    sensitivitySlider.value = the_winamp_offsets['winamp_beat_sensitivity'];
+                    document.getElementById('sensitivityValue').textContent = sensitivitySlider.value;
+                }
             }
         }
 
