icon fixes, modal fixes

--- a/dj.html
+++ b/dj.html
@@ -11,6 +11,8 @@
     <meta http-equiv="Expires" content="0"/>
     <title>DJ Lights</title>
     <link rel="manifest" href="lights-manifest.webmanifest">
+    <link rel="icon" href="lights_icons/icon48.png">
+    <link rel="apple-touch-icon" href="lights_icons/icon180.png" sizes="180x180">
 </head>
 
 <body tabindex="-1">
@@ -1192,6 +1194,7 @@
             border-radius: 8px;
             position: relative;
             box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+            font-size: 3vh;
         }
 
         .close-button {
@@ -1244,6 +1247,7 @@
             background-color: #eee;
             padding: 2px 8px;
             border-radius: 4px;
+            background-color: transparent;
         }
 
         /* Style for the Slider bar */
