--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport"
         content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="0"/>
     <title>DJ Songs</title>
-    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="manifest" href="songs-manifest.webmanifest">
+    <link rel="icon" href="songs_icons/icon48.png">
+    <link rel="apple-touch-icon" href="songs_icons/icon180.png" sizes="180x180">
 </head>
 
 <body tabindex="-1">
