--- a/dj.html
+++ b/dj.html
@@ -687,14 +687,19 @@
     
 
     var profileOrder = {
-        'Andrew': 6,
+        'winamp rated 5': -6,
+        'winamp rated 4': -5,
+        'winamp rated 3': -4,
+        'winamp rated 2': -3,
+        'winamp rated 1': -2,
+        'winamp_all': -1,
+        'Andrew': 0,
         'Eric': 1,
         'Emma': 2,
         'Fun Grid': 3,
         'Winamp Alone': 4,
         'Winamp Good 2': 5,
         'Colors': 10,
-        'winamp_all': 0,
         'winamp_good_1': 14,
         'winamp_tests': 15,
         'Shows': 16,        
